Add copyBufferToTexture function and update build tasks
The copyBufferToTexture function was added across multiple files to support copying buffers to textures. In addition, various build tasks were updated and refactored, such as runJvmE2e and runE2eTest, to better align with the updated code. TextureRenderingContext was also updated to include a new usage parameter.